fixed small gap between ground and canvas

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -66,13 +66,14 @@ background: white;
 	background: url(../images/Ground.svg) 50% 50% repeat-y;
 	position: absolute;
 	left: -10em;
-	top: 51.8em;
+	top: 52em;
 	width: 122.4em;
 	height: 5.8em;
 	background-size: 100%;
-	-webkit-animation: run 2s infinite;
+	-webkit-animation: run 1s infinite;
 }
 
+/*Makes the ground go from left and right */
 @-webkit-keyframes run {
 	from {
 		left: -10em;
